src/components/forms/forms.module.scss
.root {
  text-align: center;
}

.form {
  display: flex;
  flex-direction: column;
  gap: 24px;
  text-align: left;
}

.topMargin {
  margin-top: 24px;
}

.description {
  color: var(--color-dark-100);
}

.centered {
  align-self: center;
}

.linkButton {
  cursor: pointer;
  align-self: center;
  width: fit-content;
}

